--- a/styles/style.css
+++ b/styles/style.css
@@ -27,12 +27,12 @@ nav{
   font-size: 20px;
   font-weight: 500px;
   border-style: none;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color:#4E47FF ;
   color: white;
   height: fit-content;
   max-width: fit-content;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 18px 10px 18px;
 }
 .nav-title{
     font-size: 35px;
@@ -43,4 +43,28 @@ nav{
     text-align: center;
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+/* main---->> first section */
+.section-1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+section img{
+    border-radius: 22px;
+    width: 30%;
+    height: 30%;
+
+}
+.sec-1-title{
+    font-size:xx-large;
+    font-weight: 700;
+}
+.sec-1-des{
+    font-size: 18px;
+    color: darkgray;
 }
