--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,10 @@ nav{
   max-width: fit-content;
   padding: 10px 18px 10px 18px;
 }
+.sign-btn:hover{
+    color: black;
+    background-color: orange;
+}
 .nav-title{
     font-size: 35px;
     font-weight: 800px;
@@ -46,7 +50,7 @@ nav{
 }
 
 /* main---->> first section */
-.section-1{
+.sec-1-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -68,6 +72,8 @@ section img{
     font-size: 18px;
     color: darkgray;
 }
+
+/* Section 2 related style */
 
 .sec-2-container{
   background-color: lavender;
@@ -97,4 +103,101 @@ section img{
 }
 .sec-2-container p{
     color: darkgray;
+}
+
+/* Section 3 challenge part style */
+
+.sec-3-container{
+    margin-top: 130px;
+}
+.star-icon{
+    height: 15px;
+    width: 15px;
+}
+.img-icon{
+    height: 35px;
+    width:35px;
+}
+.card-bottom{
+    display: flex;
+    justify-content:start;
+    align-items:center;
+    gap: 5px;
+}
+.sec-3-container h3{
+    text-align: center;
+    font-size: xx-large;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+.date{
+    color:darkgrey;
+    margin-top: 0px;
+}
+.sec-3-name{
+    margin-bottom: 0px;
+    font-weight: 600;
+}
+.card-title{
+    font-size: larger;
+    font-weight: 700;
+    margin-bottom: 0px;
+}
+.card-des{
+    font-size: 18px;
+    color: dimgray;
+    font-weight: 400;
+    margin-top: 2px;
+}
+.card-container{
+    background-color:ghostwhite;
+    max-width: fit-content;
+    padding: 15px 30px 10px 15px;
+    border-radius: 12px;
+}
+.card-sec{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+/* section 4 form related style */
+.form-sec-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+    background-color: aliceblue;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    padding: 50px;
+}
+.form-sec-container h1{
+    font-size: 60px;
+    font-weight: 800;
+}
+input{
+    padding: 10px 10px;
+    border-radius: 8px;
+    border: none;
+    background-color: white;
+    width: 350px;
+    height: 30px;
+    margin: 5px;
+}
+#message{
+    padding: 10px 10px;
+    height: 60px ;
+}
+.form-btn{
+    color: white;
+    background-color: #4E47FF;
+    padding: 15px 150px;
+    
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    margin-top: 5px;
+
 }
